--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "platform": "^1.3.0"
   },
   "peerDependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "0.13.x"
   },
   "repository": {
     "type": "git",
@@ -57,8 +56,6 @@
     "mocha": "^2.2.5",
     "style-loader": "^0.12.3",
     "webpack": "^1.11.0",
-    "webpack-dev-server": "^1.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "webpack-dev-server": "^1.10.1"
   }
 }
