--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-shortcuts",
+  "name": "forked-react-shortcuts",
   "description": "React shortcuts",
   "version": "0.7.3",
   "license": "MIT",
